[package]
name = "lookups"
version = "0.0.1"
edition = "2021"
authors = ["Mario Linke"]
description = "Improve the data retrieval operations for collections."
license = "MIT"
documentation = "https://docs.rs/lookups/"
repository = "https://github.com/lima1909/lookups"
keywords = ["filter", "query", "index", "search", "collection"]
categories = ["data-structures", "caching"]



[dependencies]

[dev-dependencies]
rstest = "0.18"