[package]
name = "lookups"
version = "0.0.1"
edition = "2021"
authors = ["Mario Linke"]
description = "Improve the data retrieval operations for collections."
license = "MIT"
documentation = "https://docs.rs/lookups/"
repository = "https://github.com/lima1909/lookups"
keywords = ["filter", "query", "index", "search", "collection"]
categories = ["data-structures", "caching"]



[dependencies]
hashbrown = { version = "0.14", optional = true }

[features]
hashbrown = [ "dep:hashbrown" ]

[dev-dependencies]
rstest = "0.18"