[package]
name = "lookups"
version = "0.1.1"
edition = "2021"
authors = ["Mario Linke"]
description = "Improve the data retrieval operations for collections."
license = "MIT"
documentation = "https://docs.rs/lookups/"
repository = "https://github.com/lima1909/lookups"
keywords = ["filter", "query", "index", "search", "collection"]
categories = ["data-structures", "caching"]
exclude = [".github", ".git", "Cargo.lock"]


[dependencies]
hashbrown = { version = "0.14", optional = true }

[features]
hashbrown = [ "dep:hashbrown" ]

[dev-dependencies]
rstest = "0.18"
divan = "0.1"

[[bench]]
name = "example"
harness = false